src/objects/Service_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Kit_Price__c</fullName>
        <label>Actual Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Retail_Price__c</fullName>
        <label>Actual Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Discount_Percent__c</fullName>
        <formula>IF(ISPICKVAL(Service_Order_Header__r.Transaction_Type__r.Type__c, &apos;Customer&apos;), 
        IF(!ISBLANK(Part__c),  Service_Order_Header__r.Parts_Bulk_Discount_Percent__c , 
            IF(!ISBLANK(Fee__c), Service_Order_Header__r.Fees_Bulk_Discount_Percent__c,
               IF(!ISBLANK(Sublet__c), Service_Order_Header__r.Sublet_Bulk_Discount_Percent__c, 
                   IF(!ISBLANK(Labour_Code__c), Service_Order_Header__r.Labor_Bulk_Discount_Percent__c, 0) ) )) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bulk Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CO_Header_Id__c</fullName>
        <formula>Service_Order_Header__r.CO_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO Header Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Customer_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Status__c</fullName>
        <formula>TEXT(Service_Order_Header__r.CO_Header__r.Order_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Order_Controls__c</fullName>
        <label>Commit Order Controls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Deal Item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF( Calculated_Customer_Price__c == 0, 0,
    IF( Actual_Retail_Price__c == 0,
    Calculated_Customer_Price__c - (IF($Setup.Configurations__c.Tax_Included_Pricing__c,
    Price_When_Tax_Included__c , Kit_Price__c )),
    Actual_Retail_Price__c - (IF($Setup.Configurations__c.Tax_Included_Pricing__c,
    Price_When_Tax_Included__c , Kit_Price__c ))
    )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup To deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Label__c</fullName>
        <formula>IF( Part__c != null, Part__r.Applicable_Tax__r.Forms_Label__c, IF( Fee__c != null, Fee__r.Applicable_Tax__r.Forms_Label__c, IF( Labour_Code__c != null, Labour_Code__r.Applicable_Tax__r.Forms_Label__c, &apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Calculate_Supplies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is populate as per the values of the labor calculate supplies field.</description>
        <label>Is Calculate Supplies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Environmental_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Environmental Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Fixed_Kit_LineItem_SO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Fixed_Kit_LineItem_SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Linked_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Linked Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <description>Default setting of Item/Desc from Part and Labour Code</description>
        <formula>IF( 
	Part__c != null,  
	Part__r.Part_ID__c + &apos; - &apos; +  Part__r.Description__c ,  
	IF( Labour_Code__c != null,  
		Labour_Code__r.Code__c + &apos; - &apos; +  Labour_Code__r.Description__c , 
		IF( Fee__c != null,  
		        Fee__r.Fee_Unique_Name__c,
                        IF( Sublet__c != null, 
                               Sublet__r.Code__c + &apos; - &apos; + Sublet__r.Description__c, 
                               &apos;&apos; 
                        ) 
		)
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Header_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit Header Line Item</label>
        <referenceTo>Kit_Header_Line_Item__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kit_Price_With_Price_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price With Price Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labour Code</label>
        <referenceTo>Labour_Code__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labour_Tax_Amount__c</fullName>
        <formula>( Kit_Price__c * Service_Order_Header__r.Labour_Tax__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup To Option &amp;Fee</description>
        <label>Option &amp; Fee</label>
        <referenceTo>Option_Fee__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Item_Profit__c</fullName>
        <formula>IF(AND(Fee__c != null, NOT(Fee__r.Is_Include_In_Profit_Calculation__c)),
            0,
            Revenue__c - 
            IF(Part__c != null, 
                CO_Line_Item__r.Adjusted_Cost_Coli__c,
                IF(Labour_Code__c != null,
                    IF(Service_Order_Header__r.Is_Technician_Hours_Costing_Enabled__c , 
                        Total_Cost__c,
                        Qty_Needed__c * (
                            IF(ISPICKVAL(Labour_Code__r.Cost_Method__c, &apos;Fixed Cost&apos;),
                                Labour_Code__r.Cost_Rate__c,
                                Kit_Price__c * Labour_Code__r.Cost_Rate__c / 100
                            )
                        )
                    ),
                    IF(Sublet__c != null,
                        Qty_Needed__c * (
                            IF(ISPICKVAL(Sublet__r.Cost_Method__c, &apos;Fixed Cost&apos;),
                                Sublet__r.Cost__c,
                                Kit_Price__c * Sublet__r.Cost__c / 100
                            )
                        ),
                        0
                    )
                )
            )
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Item Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Fee_Sales__c</fullName>
        <formula>IF(
AND(Fee__c != null,ISPICKVAL(Type__c, &apos;&apos;)),
(Kit_Price__c * Qty_Needed__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Fee Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Labor_Sales__c</fullName>
        <formula>IF(
Labour_Code__c != null,
(Kit_Price__c * Qty_Needed__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Labor Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Part_Sales__c</fullName>
        <formula>IF(
Part__c != null,
(Kit_Price__c * Qty_Needed__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Part Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Sublet_Sales__c</fullName>
        <formula>IF(
Sublet__c != null,
(Kit_Price__c * Qty_Needed__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Sublet Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Tax_Supplies_Sales__c</fullName>
        <formula>IF(
AND(Fee__c != null,ISPICKVAL(Type__c, &apos;Shop Supply&apos;)),
(Kit_Price__c * Qty_Needed__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Tax Supplies Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_When_Tax_Included__c</fullName>
        <label>Price When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Required Field.  The quantity of the item that is needed for the kit.</description>
        <label>Qty Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_To_Order__c</fullName>
        <formula>IF(Part__c != null || Sublet__c != null, Qty_Needed__c - Qty_Committed__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty To Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>Default setting of Retail price based on Part and Labour code</description>
        <formula>
        IF(
            Part__c != null,
            Part__r.Retail_Price__c,
                IF( Labour_Code__c != null,
                    Labour_Code__r.Rate__c ,
                        IF( Fee__c != null,
                        Fee__r.Price__c,
                            IF( Sublet__c != null,
                                Sublet__r.Price__c,
                                0
                            )
                        )   
                    )
        )
        </formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>Kit_Price__c * Qty_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Kit Header</label>
        <referenceTo>Service_Order_Kit_Header__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of service job line item</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sublet</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Type__c</field>
                <operation>equals</operation>
                <value>Sublet</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount_When_Tax_Included__c</fullName>
        <label>Tax Amount When Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <formula>(Qty_Needed__c * Kit_Price__c * Tax_Percent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Percent__c</fullName>
        <label>Tax Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>CO_Line_Item__r.Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price_With_Tax__c</fullName>
        <formula>Revenue__c +  Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price With Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>
            if((NOT(ISBLANK(Fee__c)) &amp;&amp; Fee__r.Is_Include_In_Profit_Calculation__c &amp;&amp; NOT(ISBLANK(Revenue__c ))), Revenue__c,
            if(NOT(ISBLANK(Revenue__c - Total_Cost__c)) &amp;&amp; ISBLANK(Fee__c),
            (Revenue__c - Total_Cost__c),
            0)
            )
        </formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF($Setup.Configurations__c.Tax_Included_Pricing__c, Price_When_Tax_Included__c * Qty_Needed__c , Kit_Price__c * Qty_Needed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shop Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>Unique identifier to map on UI.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier to map on UI.</inlineHelpText>
        <label>UUID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Number__c</fullName>
        <description>Vendor Order Header Name</description>
        <label>VO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VO_Status__c</fullName>
        <label>VO Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Order Header</label>
        <referenceTo>Vendor_Order_Header__c</referenceTo>
        <relationshipLabel>Service Order Line Items</relationshipLabel>
        <relationshipName>Service_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>WIP_Cost__c</fullName>
        <formula>IF( NOT(Service_Order_Header__r.SO_Status__c = &apos;Invoiced&apos;),  
            IF((!ISNULL(Part__r.Average_Cost__c) &amp;&amp; Part__r.Average_Cost__c != 0), 
            Part__r.Average_Cost__c * Qty_Committed__c,  
            IF(!ISNULL(Part__r.Last_Cost__c) , 
            (Part__r.Last_Cost__c * Qty_Committed__c), 
            0)), 
            0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIP Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Service Order Line Item</label>
    <nameField>
        <displayFormat>SOLI-{00000000}</displayFormat>
        <label>Service Order Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>